--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Sb</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
